# sacloud-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  lefthook.yml  pyproject.toml
.github/: SECURITY.md
.github/workflows/: release.yml  tests.yaml
src/: main.py
src/appliance/handlers/: database.py  factory.py  loadbalancer.py  vpn_router.py
src/bill/handlers/: bill.py  factory.py
src/compute/handlers/: factory.py  interface.py  server.py
src/controlpanel/handlers/: factory.py  icon.py
src/core/: auth.py  consts.py  mcp.py  zone.py
src/core/handlers/: base.py  region.py  zone.py
src/docs/handlers/: api_documents.py  documents.py  factory.py
src/docs/materials/: outline.json
src/networking/handlers/: bridge.py  factory.py  router.py  switch.py
src/objectstorage/: consts.py  factory.py
src/objectstorage/handlers/: factory.py  objectstorage.py
src/storage/handlers/: archive.py  disk.py  factory.py
tests/: conftest.py  error.py  test_calc.py
tests/compute/: test_interface.py  test_server.py
tests/networking/: test_switch.py
tests/objectstorage/: test_objectstorage.py
