[project]
name = "py-template"
version = "0.1.0"
description = "Python template for sacloud"
authors = [{name = "SAKURA internet Inc.", email = "oss-dev@sakura.ad.jp"}]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.urls]
Source = "https://github.com/sacloud/py-template"

[dependency-groups]
dev = [
    "lefthook>=1.11.14",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

# TODO: uv_buildが拡張ライブラリをサポートしたらuv_buildを採用
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_template"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".github", ".venv", ".vscode", ".ruff_cache"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N", "B", "PIE794"] # selectの内容はプロダクト毎に適切なのを設定する
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
xfail_strict = true
