[project]
name = "sacloud-mcp"
version = "0.1.0"
description = "MCP Server for sakura cloud"
authors = [{name = "SAKURA internet Inc.", email = "oss-dev@sakura.ad.jp"}]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.43",
    "bs4>=0.0.2",
    "fastmcp>=2.9.0",
    "html-to-markdown>=1.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

[project.urls]
Source = "https://github.com/sacloud/mcp-sakura-cloud"

[dependency-groups]
dev = [
    "lefthook>=1.11.14",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.0",
]

# TODO: uv_buildが拡張ライブラリをサポートしたらuv_buildを採用
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_template"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".github", ".venv", ".vscode", ".ruff_cache"]

# TODO: select等を適切に設定する
[tool.ruff.lint]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
xfail_strict = true
pythonpath = ["src"]
testpaths = ["tests"]
